# client-Python

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  save.yml  tests.yml
elitea_test/: test_client.py  test_client_updated.py
reportportal-client/service/: exception.py  service.py
reportportal_client/: __init__.py  client.py  client.pyi  client_async.py  errors.py  helpers.py  helpers.pyi  portal.py  service.py  service_async.py
reportportal_client/_internal/: __init__.py  http.py
reportportal_client/_local/: __init__.py  __init__.pyi
reportportal_client/aio/: __init__.py  client.py  http.py  tasks.py  util.py
reportportal_client/async/: client.py
reportportal_client/core/: __init__.py  log_manager.py  log_manager.pyi  rp_file.py  rp_file.pyi  rp_issues.py  rp_issues.pyi  rp_requests.py  rp_requests.pyi  rp_responses.py  rp_responses.pyi  test_manager.py  test_manager.pyi  worker.py  worker.pyi
reportportal_client/helpers/: __init__.py  common_helpers.py  markdown_helpers.py
reportportal_client/items/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py  test_analytics.py  test_client.py  test_client_enhanced_1.py  test_client_enhanced_2.py  test_client_enhanced_3.py  test_client_factory.py  test_client_id.py  test_helpers.py  test_nested.py  test_service.py  test_statistics.py  tests.py
tests_elitea/: test.py
(+69 files in other folders)
