[build-system]
requires = [
  # sync with setup.py until we discard non-pep-517/518
  "setuptools>=40.0",
  "setuptools-scm",
  "wheel",
  "importlib-metadata"
]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 119
profile = "black"

[tool.black]
line-length = 119
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = "pytest-cov"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "session"
